<resources>
    <string name="app_name">SubmissionSatu</string>

    <string name="name">Name</string>
    <string name="username">Username</string>
    <string name="data_location">Data Location</string>
    <string name="location">Location</string>
    <string name="data_name">data_name</string>
    <string name="repository">Repository</string>
    <string name="data_repository">data_repository</string>
    <string name="share">Share</string>
    <string name="data_following">data_following</string>
    <string name="following">Following</string>
    <string name="data_follower">data_follower</string>
    <string name="followers">Followers</string>
    <string name="data_company">data_company</string>
    <string name="company">Company</string>
    <string name="avatar">Avatar</string>
    <string name="search">Search</string>
    <string name="search_hint">Search Hint</string>

    <string name="this_activity">Ini adalah menu activity</string>
    <string name="this_fragment">Ini adalah menu fragment</string>
    <string name="menu_1">Menu 1</string>
    <string name="menu_2">Menu 2</string>

    <string name="dark_mode">Dark Mode</string>
    <string name="setting">Setting</string>
    <string name="favourite">Favourite</string>
    <string name="delete">Delete</string>
    <string name="submit">Favourite</string>
    <string name="cancel">Cancel</string>
    <string name="message_cancel">Apakah anda ingin membatalkan perubahan pada form?</string>
    <string name="message_delete">Apakah anda yakin ingin menghapus item ini?</string>
    <string name="yes">Ya</string>
    <string name="deleted">Satu item berhasil dihapus</string>
    <string name="no">Tidak</string>
    <string name="tambah">Berhasil ditambahkan ke favorite</string>
    <string name="hapus">Berhasil dihapus dari favourite</string>
    <string name="batal">Batal</string>
    <string name="txt_hapus">Delete</string>
    <string name="dialog_hapus">Apakah anda yakin ingin menghapus item ini?</string>
    <string name="detail_user">Detail User</string>
</resources>


