<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <group android:menuCategory="container">
        <item android:id="@+id/menu1"
            android:title="@string/setting"
            android:icon="@drawable/ic_settings"
            app:showAsAction="always"
            tools:ignore="AlwaysShowAction" />
        <item android:id="@+id/menu2"
            android:title="@string/favourite"
            android:icon="@drawable/ic_favourite"
            app:showAsAction="always"/>
    </group>
    <item
        android:id="@+id/search"
        android:icon="@drawable/ic_search"
        android:title="@string/search"
        app:actionViewClass="androidx.appcompat.widget.SearchView"
        app:showAsAction="collapseActionView|always"/>
</menu>